--- a/config.yml
+++ b/config.yml
@@ -7,6 +7,7 @@ addr:
     # key is worker_id, which must be int
     0: 'localhost:12110'
     1: 'localhost:12111'
+    2: 'localhost:12112'
 # DNN load function, use this to choose dnn
 dnn_loader: !!python/name:dnn_models.chain.prepare_alexnet
 # Path of the input video file
