使用Trainer和WorkerProfiler对离线数据收集过程进行抽象，torch==1.4.0+cpu且torchvision==0.5+cpu下master输出误差在1e-7左右

--- a/config.yml
+++ b/config.yml
@@ -8,6 +8,7 @@ addr:
     0: 'localhost:12110'
     1: 'localhost:12111'
     2: 'localhost:12112'
+  trainer: 'localhost:12100'
 # DNN load function, use this to choose dnn
 dnn_loader: !!python/name:dnn_models.chain.prepare_alexnet
 # Path of the input video file
@@ -20,3 +21,7 @@ check: !!bool true
 master:
 # Configuration of worker
 worker:
+  prof_niter: 5
+# Configuration of trainer
+trainer:
+  frame_num: 400
