Scheduler添加了split_chain函数，用来对链状CNN按照Worker的计算能力进行均匀切割，使得耗时尽可能接近；Master执行的IFR数加入了config；DAG网页生成在当前执行路径下；其他小修改。单元测试和本地测试正常

--- a/config.yml
+++ b/config.yml
@@ -5,6 +5,7 @@ addr:
   master: 'localhost:12120'
   worker:
     # key is worker_id, which must be int
+    # Workers are sorted by execution order
     0: 'localhost:12110'
     1: 'localhost:12111'
     2: 'localhost:12112'
@@ -19,6 +20,7 @@ frame_size: !!python/tuple [480, 720]
 check: !!bool true
 # Configuration of master
 master:
+  ifr_num: 1
 # Configuration of worker
 worker:
   prof_niter: 5
