README中添加了网络配置说明，config使用了基于frp内网穿透的配置。按照README的配置，通过frp内网穿透，实现了 端(Master-pi2G1)，边(Worker0-pi4G, Worker1-PC)，云(Worker2-阿里云) 的协同，测试正常

--- a/config.yml
+++ b/config.yml
@@ -2,14 +2,14 @@
 log_cfg: logging.yml
 # IP addr and port of master and workers
 addr:
-  master: 'localhost:12120'
+  master: '121.199.15.155:11100'
   worker:
     # key is worker_id, which must be continuously increased from 0
     # Workers are sorted by execution order
-    0: 'localhost:12110'
-    1: 'localhost:12111'
-    2: 'localhost:12112'
-  trainer: 'localhost:12100'
+    0: '121.199.15.155:11110'
+    1: '121.199.15.155:11111'
+    2: '121.199.15.155:11112'
+  trainer: '121.199.15.155:11120'
 # DNN load function, use this to choose dnn
 dnn_loader: !!python/name:dnn_models.chain.prepare_alexnet
 # Path of the input video file
