--- a/config.yml
+++ b/config.yml
@@ -1,15 +1,28 @@
 # Configuration file path of logging
 log_cfg: logging.yml
-# IP addr and port of master and workers
-addr:
-  master: '121.199.15.155:11100'
-  worker:
-    # key is worker_id, which must be continuously increased from 0
-    # Workers are sorted by execution order
-    0: '121.199.15.155:11110'
-    1: '121.199.15.155:11111'
-    2: '121.199.15.155:11112'
-  trainer: '121.199.15.155:11120'
+
+# Local ports listened by each service
+port:
+  master: 11110
+  trainer: 22220
+  worker: [33330, 33331, 33332]
+# Network address when accessing. m, t, w0 correspond to master, trainer, worker0 respectively.
+net:
+  m->t: 'localhost:22220'
+  m->w0: 'localhost:33330'
+  m->w1: 'localhost:33331'
+  m->w2: 'localhost:33332'
+  w0->w1: 'localhost:33331'
+  w1->w2: 'localhost:33332'
+  w2->m: 'localhost:11110'
+#  m->t: '114.212.84.93:22220'
+#  m->w0: '192.168.0.114:33330'
+#  m->w1: '192.168.0.121:33331'
+#  m->w2: '121.199.15.155:33332'
+#  w0->w1: '192.168.0.121:33331'
+#  w1->w2: '121.199.15.155:33332'
+#  w2->m: '121.199.15.155:11110'
+
 # DNN load function, use this to choose dnn
 dnn_loader: !!python/name:dnn_models.chain.prepare_alexnet
 # Path of the input video file
