云边协同测试正常，更新了README

--- a/config.yml
+++ b/config.yml
@@ -8,20 +8,20 @@ port:
   worker: [33330, 33331, 33332]
 # Network address when accessing. m, t, w0 correspond to master, trainer, worker0 respectively.
 net:
-  m->t: 'localhost:22220'
-  m->w0: 'localhost:33330'
-  m->w1: 'localhost:33331'
-  m->w2: 'localhost:33332'
-  w0->w1: 'localhost:33331'
-  w1->w2: 'localhost:33332'
-  w2->m: 'localhost:11110'
-#  m->t: '114.212.84.93:22220'
-#  m->w0: '192.168.0.114:33330'
-#  m->w1: '192.168.0.121:33331'
-#  m->w2: '121.199.15.155:33332'
-#  w0->w1: '192.168.0.121:33331'
-#  w1->w2: '121.199.15.155:33332'
-#  w2->m: '121.199.15.155:11110'
+#  m->t: 'localhost:22220'
+#  m->w0: 'localhost:33330'
+#  m->w1: 'localhost:33331'
+#  m->w2: 'localhost:33332'
+#  w0->w1: 'localhost:33331'
+#  w1->w2: 'localhost:33332'
+#  w2->m: 'localhost:11110'
+  m->t: '114.212.84.93:22220'
+  m->w0: '192.168.0.114:33330'
+  m->w1: '114.212.84.93:33331'
+  m->w2: '121.199.15.155:33332'
+  w0->w1: '114.212.84.93:33331'
+  w1->w2: '121.199.15.155:33332'
+  w2->m: '121.199.15.155:11110'
 
 # DNN load function, use this to choose dnn
 dnn_loader: !!python/name:dnn_models.chain.prepare_alexnet
