添加AsyncClient把new_ifr和report_finish这种无需结果的RPC改成了异步发送请求。PC本地协同测试正常

--- a/logging.yml
+++ b/logging.yml
@@ -14,7 +14,7 @@ handlers:
 #    stream: ext://sys.stdout
 loggers:
   # logger命名统一使用类名
-  Scheduler:
+  AsyncClient:
     handlers: [ console ]
     level: DEBUG
   Master:
@@ -24,6 +24,9 @@ loggers:
     handlers: [ console ]
     level: DEBUG
   MasterStub:
+    handlers: [ console ]
+    level: DEBUG
+  Scheduler:
     handlers: [ console ]
     level: DEBUG
   Trainer:
