通过配置itg或dif可以选择运行模式。单元测试正常，PC本地协同测试正常

--- a/logging.yml
+++ b/logging.yml
@@ -16,7 +16,7 @@ loggers:
   # logger命名统一使用类名
   AsyncClient:
     handlers: [ console ]
-    level: DEBUG
+    level: INFO
   Master:
     handlers: [ console ]
     level: INFO
