--- a/config.yml
+++ b/config.yml
@@ -14,23 +14,21 @@ net:
   m->w2: 'localhost:33332'
   w0->w1: 'localhost:33331'
   w1->w2: 'localhost:33332'
-  w2->m: 'localhost:11110'
 #  m->t: '114.212.84.93:22220'
 #  m->w0: '192.168.0.114:33330'
 #  m->w1: '114.212.84.93:33331'
 #  m->w2: '121.199.15.155:33332'
 #  w0->w1: '114.212.84.93:33331'
 #  w1->w2: '121.199.15.155:33332'
-#  w2->m: '121.199.15.155:11110'
 
 # DNN load function, use this to choose dnn
-dnn_loader: !!python/name:dnn_models.chain.prepare_vgg16
+dnn_loader: !!python/name:dnn_models.chain.prepare_alexnet
 # Path of the input video file
 video_path: media/road.mp4
 # Adjust the input frame to [nrow, ncol], which is a tuple of two int. None indicates don't resize.
 frame_size: !!python/tuple [480, 720]
 # Whether check the correctness of result
-check: !!bool false
+check: !!bool true
 # "itg" or "dif". This option generates two corresponding options: executor_type and job_type
 mode: dif
 # Configuration of master
