--- a/config.yml
+++ b/config.yml
@@ -8,18 +8,18 @@ port:
   worker: [33330, 33331, 33332]
 # Network address when accessing. m, t, w0 correspond to master, trainer, worker0 respectively.
 net:
-#  m->t: 'localhost:22220'
-#  m->w0: 'localhost:33330'
-#  m->w1: 'localhost:33331'
-#  m->w2: 'localhost:33332'
-#  w0->w1: 'localhost:33331'
-#  w1->w2: 'localhost:33332'
-  m->t: '114.212.84.93:22220'
-  m->w0: '192.168.0.114:33330'
-  m->w1: '114.212.84.93:33331'
-  m->w2: '121.199.15.155:33332'
-  w0->w1: '114.212.84.93:33331'
-  w1->w2: '121.199.15.155:33332'
+  m->t: 'localhost:22220'
+  m->w0: 'localhost:33330'
+  m->w1: 'localhost:33331'
+  m->w2: 'localhost:33332'
+  w0->w1: 'localhost:33331'
+  w1->w2: 'localhost:33332'
+#  m->t: '114.212.84.93:22220'
+#  m->w0: '192.168.0.114:33330'
+#  m->w1: '114.212.84.93:33331'
+#  m->w2: '121.199.15.155:33332'
+#  w0->w1: '114.212.84.93:33331'
+#  w1->w2: '121.199.15.155:33332'
 
 # DNN load function, use this to choose dnn
 dnn_loader: !!python/name:dnn_models.chain.prepare_alexnet
@@ -28,7 +28,7 @@ video_path: media/road.mp4
 # Adjust the input frame to [nrow, ncol], which is a tuple of two int. None indicates don't resize.
 frame_size: !!python/tuple [480, 720]
 # Whether check the correctness of result
-check: !!bool false
+check: !!bool true
 # "itg" or "dif". This option generates two corresponding options: executor_type and job_type
 mode: dif
 # Configuration of master
