Worker的LayerCost缓存文件名包含了帧大小，log做了小调整。PC本地协同测试正常

--- a/logging.yml
+++ b/logging.yml
@@ -40,7 +40,7 @@ loggers:
     level: DEBUG
   Worker:
     handlers: [ console ]
-    level: INFO
+    level: DEBUG
   WorkerServicer:
     handlers: [ console ]
     level: DEBUG
