--- a/config.yml
+++ b/config.yml
@@ -5,21 +5,19 @@ log_cfg: logging.yml
 port:
   master: 11110
   trainer: 22220
-  worker: [33330, 33331, 33332]
+  worker: [33330, 33331]
 # Network address when accessing. m, t, w0 correspond to master, trainer, worker0 respectively.
 net:
-  m->t: 'localhost:22220'
-  m->w0: 'localhost:33330'
-  m->w1: 'localhost:33331'
-  m->w2: 'localhost:33332'
-  w0->w1: 'localhost:33331'
-  w1->w2: 'localhost:33332'
-#  m->t: '114.212.84.93:22220'
-#  m->w0: '192.168.0.114:33330'
-#  m->w1: '114.212.84.93:33331'
-#  m->w2: '121.199.15.155:33332'
-#  w0->w1: '114.212.84.93:33331'
-#  w1->w2: '121.199.15.155:33332'
+#  m->t: 'localhost:22220'
+#  m->w0: 'localhost:33330'
+#  m->w1: 'localhost:33331'
+#  m->w2: 'localhost:33332'
+#  w0->w1: 'localhost:33331'
+#  w1->w2: 'localhost:33332'
+  m->t: '114.212.84.93:22220'
+  m->w0: '192.168.0.114:33330'
+  m->w1: '121.199.15.155:33331'
+  w0->w1: '121.199.15.155:33331'
 
 # DNN load function, use this to choose dnn
 dnn_loader: !!python/name:dnn_models.chain.prepare_alexnet
@@ -30,7 +28,7 @@ frame_size: !!python/tuple [480, 720]
 # "itg" or "dif". This option generates two corresponding options: executor_type and job_type
 mode: dif
 # Whether check the correctness of result
-check: !!bool true
+check: !!bool false
 
 # Configuration of master
 master:
