ItgJob序列化时不使用稀疏编码。云边协同测试正常。添加了实验效果图

--- a/logging.yml
+++ b/logging.yml
@@ -39,7 +39,7 @@ loggers:
   MasterStub:
     handlers: [ console, trace ]
     level: DEBUG
-  Scheduler:
+  NSCScheduler:
     handlers: [ console, trace ]
     level: DEBUG
   Trainer:
