[实验] 使用tc+cgroup的方法对设备之间带宽限速成功

--- a/config.yml
+++ b/config.yml
@@ -26,7 +26,7 @@ video_path: media/road.mp4
 # Adjust the input frame to [nrow, ncol], which is a tuple of two int. None indicates don't resize.
 frame_size: !!python/tuple [480, 720]
 # "itg" or "dif". This option generates two corresponding options: executor_type and job_type
-mode: dif
+mode: itg
 # Whether check the correctness of result
 check: !!bool false
 
