添加了OSCScheduler作为baseline。云边协同测试正常

--- a/config.yml
+++ b/config.yml
@@ -26,7 +26,7 @@ video_path: media/road.mp4
 # Adjust the input frame to [nrow, ncol], which is a tuple of two int. None indicates don't resize.
 frame_size: !!python/tuple [480, 720]
 # "itg" or "dif". This option generates two corresponding options: executor_type and job_type
-mode: itg
+mode: dif
 # Whether check the correctness of result
 check: !!bool false
 
@@ -35,12 +35,14 @@ master:
   ifr_num: 3  # Total frame to be processed
   pd_num: 2  # How many frames are pending at the same time, 0 means unlimited
   itv_time: 0  # How long to wait after issuing an IFR, for debugging only. Normally it should be 0
-  scheduler: !!python/name:schedulers.lbc_scheduler.LBCScheduler
+  scheduler: !!python/name:schedulers.osc_scheduler.OSCScheduler
+  OSCScheduler:
+    side: cloud  # edge/cloud
   LBCScheduler:
   NSCScheduler:
   # len(bandwidth) must be equal to len(worker).
   # bandwidth[w] = bandwidth(MB) between w-1 and w. bandwidth[0] refers to master and worker0.
-  bandwidth: [4, 1]
+  bandwidth: [3.1, 0.9]
 # Configuration of worker
 worker:
   prof_niter: 5
