--- a/config.yml
+++ b/config.yml
@@ -8,14 +8,14 @@ port:
   worker: [33330, 33331]
 # Network address when accessing. m, t, w0 correspond to master, trainer, worker0 respectively.
 net:
-#  m->t: 'localhost:22220'
-#  m->w0: 'localhost:33330'
-#  m->w1: 'localhost:33331'
-#  w0->w1: 'localhost:33331'
-  m->t: '114.212.84.93:22220'
-  m->w0: '192.168.0.114:33330'
-  m->w1: '121.199.15.155:33331'
-  w0->w1: '121.199.15.155:33331'
+  m->t: 'localhost:22220'
+  m->w0: 'localhost:33330'
+  m->w1: 'localhost:33331'
+  w0->w1: 'localhost:33331'
+#  m->t: '114.212.84.93:22220'
+#  m->w0: '192.168.0.114:33330'
+#  m->w1: '121.199.15.155:33331'
+#  w0->w1: '121.199.15.155:33331'
 
 # DNN load function, use this to choose dnn
 dnn_loader: !!python/name:dnn_models.chain.prepare_alexnet
@@ -33,7 +33,7 @@ master:
   ifr_num: 6  # Total frame to be processed
   pd_num: 0  # How many frames are pending at the same time, 0 means unlimited
   itv_time: 0  # How long to wait after issuing an IFR, for debugging only. Normally it should be 0
-  scheduler: !!python/name:master.my_scheduler.MyScheduler
+  scheduler: !!python/name:schedulers.my_scheduler.MyScheduler
   OSCScheduler:
     side: cloud  # edge/cloud
   LBCScheduler:
