--- a/config.yml
+++ b/config.yml
@@ -8,14 +8,14 @@ port:
   worker: [33330, 33331]
 # Network address when accessing. m, t, w0 correspond to master, trainer, worker0 respectively.
 net:
-  m->t: 'localhost:22220'
-  m->w0: 'localhost:33330'
-  m->w1: 'localhost:33331'
-  w0->w1: 'localhost:33331'
-#  m->t: '114.212.84.93:22220'
-#  m->w0: '192.168.0.114:33330'
-#  m->w1: '121.199.15.155:33331'
-#  w0->w1: '121.199.15.155:33331'
+#  m->t: 'localhost:22220'
+#  m->w0: 'localhost:33330'
+#  m->w1: 'localhost:33331'
+#  w0->w1: 'localhost:33331'
+  m->t: '114.212.84.93:22220'
+  m->w0: '192.168.0.114:33330'
+  m->w1: '121.199.15.155:33331'
+  w0->w1: '121.199.15.155:33331'
 
 # DNN load function, use this to choose dnn
 dnn_loader: !!python/name:dnn_models.chain.prepare_alexnet
@@ -35,11 +35,11 @@ master:
   itv_time: 0  # How long to wait after issuing an IFR, for debugging only. Normally it should be 0
   scheduler: !!python/name:schedulers.my_scheduler.MyScheduler
   OSCScheduler:
-    side: cloud  # edge/cloud
+    side: edge  # edge/cloud
   LBCScheduler:
   NSCScheduler:
   MyScheduler:
-    gp_size: 2  # The number of frames a group contains. A group of frames will use the same scheduling policy
+    gp_size: 6  # The number of frames a group contains. A group of frames will use the same scheduling policy
   # len(bandwidth) must be equal to len(worker).
   # bandwidth[w] = bandwidth(MB) between w-1 and w. bandwidth[0] refers to master and worker0.
   bandwidth: [3.1, 0.9]
