vtrace添加了自动从远程下载tc文件的功能。本地测试和云边协同测试均正常

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ extra_scripts/
 *.cst
 # 屏蔽trace文件格式
 *.tc
+# 屏蔽有IP地址用户名密码的device.yml
+device.yml
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
