LBCScheduler可以处理DAG了，更名为LBScheduler。协同测试正常

--- a/logging.yml
+++ b/logging.yml
@@ -45,6 +45,9 @@ loggers:
   __main__:
     handlers: [ console ]
     level: INFO
+  LBScheduler:
+    handlers: [ console ]
+    level: INFO
   NSCScheduler:
     handlers: [ console, trace ]
     level: DEBUG
