--- a/config.yml
+++ b/config.yml
@@ -18,7 +18,7 @@ net:
   w0->w1: '192.168.0.121:33331'
 
 # DNN load function, use this to choose dnn
-dnn_loader: !!python/name:dnn_models.chain.prepare_alexnet
+dnn_loader: !!python/name:dnn_models.googlenet.prepare_googlenet
 # Path of the input video file
 video_path: media/road.mp4
 # Adjust the input frame to [nrow, ncol], which is a tuple of two int. None indicates don't resize.
@@ -31,7 +31,7 @@ check: !!bool false
 # Configuration of master
 master:
   ifr_num: 10  # Total frame to be processed
-  pd_num: 2  # How many frames are pending at the same time, 0 means unlimited
+  pd_num: 0  # How many frames are pending at the same time, 0 means unlimited
   itv_time: 0  # How long to wait after issuing an IFR, for debugging only. Normally it should be 0
   scheduler: !!python/name:schedulers.my_scheduler.MyScheduler
   OSCScheduler:
@@ -39,7 +39,7 @@ master:
   LBCScheduler:
   NSCScheduler:
   MyScheduler:
-    gp_size: 1  # The number of frames a group contains. A group of frames will use the same scheduling policy
+    gp_size: 3  # The number of frames a group contains. A group of frames will use the same scheduling policy
   # len(bandwidth) must be equal to len(worker).
   # bandwidth[w] = bandwidth(MB) between w-1 and w. bandwidth[0] refers to master and worker0.
   bandwidth: [3, 3]
