--- a/config.yml
+++ b/config.yml
@@ -18,7 +18,7 @@ net:
   w0->w1: '192.168.0.121:33331'
 
 # DNN load function, use this to choose dnn
-dnn_loader: !!python/name:dnn_models.googlenet.prepare_googlenet
+dnn_loader: !!python/name:dnn_models.chain.prepare_vgg16
 # Path of the input video file
 video_path: media/road.mp4
 # Adjust the input frame to [nrow, ncol], which is a tuple of two int. None indicates don't resize.
