--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ log_cfg: logging.yml
 port:
   master: 11110
   trainer: 22220
-  worker: [33330, 33331]
+  worker: [33330, 33331, 33332]
 # Network address when accessing. m, t, w0 correspond to master, trainer, worker0 respectively.
 net:
 #  m->t: 'localhost:22220'
@@ -15,7 +15,9 @@ net:
   m->t: '192.168.0.100:22220'
   m->w0: '192.168.0.112:33330'
   m->w1: '192.168.0.121:33331'
+  m->w2: '192.168.0.122:33332'
   w0->w1: '192.168.0.121:33331'
+  w1->w2: '192.168.0.122:33332'
 
 # DNN load function, use this to choose dnn
 dnn_loader: !!python/name:dnn_models.chain.prepare_vgg16
@@ -42,7 +44,7 @@ master:
     gp_size: 3  # The number of frames a group contains. A group of frames will use the same scheduling policy
   # len(bandwidth) must be equal to len(worker).
   # bandwidth[w] = bandwidth(MB) between w-1 and w. bandwidth[0] refers to master and worker0.
-  bandwidth: [3, 3]
+  bandwidth: [3, 3, 3]
 # Configuration of worker
 worker:
   prof_niter: 5
