[实验配置] 在parking.mp4上进行了测试。2个Worker（pi2G+pi2G1）协同测试正常

--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ log_cfg: logging.yml
 port:
   master: 11110
   trainer: 22220
-  worker: [33330, 33331, 33332]
+  worker: [33330, 33331]
 # Network address when accessing. m, t, w0 correspond to master, trainer, worker0 respectively.
 net:
 #  m->t: 'localhost:22220'
@@ -15,14 +15,12 @@ net:
   m->t: '192.168.0.100:22220'
   m->w0: '192.168.0.112:33330'
   m->w1: '192.168.0.121:33331'
-  m->w2: '192.168.0.122:33332'
   w0->w1: '192.168.0.121:33331'
-  w1->w2: '192.168.0.122:33332'
 
 # DNN load function, use this to choose dnn
-dnn_loader: !!python/name:dnn_models.chain.prepare_vgg16
+dnn_loader: !!python/name:dnn_models.chain.prepare_alexnet
 # Path of the input video file
-video_path: media/road.mp4
+video_path: media/parking.mp4
 # Adjust the input frame to [nrow, ncol], which is a tuple of two int. None indicates don't resize.
 frame_size: !!python/tuple [480, 720]
 # "itg" or "dif". This option generates two corresponding options: executor_type and job_type
@@ -44,7 +42,7 @@ master:
     gp_size: 3  # The number of frames a group contains. A group of frames will use the same scheduling policy
   # len(bandwidth) must be equal to len(worker).
   # bandwidth[w] = bandwidth(MB) between w-1 and w. bandwidth[0] refers to master and worker0.
-  bandwidth: [3, 3, 3]
+  bandwidth: [3, 3]
 # Configuration of worker
 worker:
   prof_niter: 5
