添加了IFRTracker用于监控IFR状态，MyScheduler调度考虑了当前IFR状态，修复了MyScheduler没有更新缓存记录的问题。2个Worker协同测试正常。代码还没整理好。

--- a/logging.yml
+++ b/logging.yml
@@ -30,6 +30,9 @@ loggers:
   AsyncClient:
     handlers: [ console, trace ]
     level: INFO
+  IFRTracker:
+    handlers: [ console, trace ]
+    level: INFO
   Master:
     handlers: [ console, trace ]
     level: INFO
