整理了代码，调整了IFRTracker和Scheduler的交互方式，Master不再是Thread，config顺序调整。2个Worker协同测试正常

--- a/config.yml
+++ b/config.yml
@@ -33,16 +33,16 @@ master:
   ifr_num: 10  # Total frame to be processed
   pd_num: 0  # How many frames are pending at the same time, 0 means unlimited
   itv_time: 0  # How long to wait after issuing an IFR, for debugging only. Normally it should be 0
-  scheduler: !!python/name:schedulers.my_scheduler.MyScheduler
-  OSCScheduler:
-    side: edge  # edge/cloud
-  LBCScheduler:
-  NSCScheduler:
-  MyScheduler:
-    gp_size: 3  # The number of frames a group contains. A group of frames will use the same scheduling policy
   # len(bandwidth) must be equal to len(worker).
   # bandwidth[w] = bandwidth(MB) between w-1 and w. bandwidth[0] refers to master and worker0.
   bandwidth: [3, 3]
+  scheduler: !!python/name:schedulers.my_scheduler.MyScheduler
+  LBScheduler:
+  MyScheduler:
+    gp_size: 3  # The number of frames a group contains. A group of frames will use the same scheduling policy
+  OSCScheduler:
+    side: edge  # edge/cloud
+  NSCScheduler:
 # Configuration of worker
 worker:
   prof_niter: 5
