[实验] vtrace代码整理，使用3种模式读取tc文件。3种模式测试都正常

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ extra_scripts/
 *.tc
 # 屏蔽有IP地址用户名密码的device.yml
 device.yml
+# 屏蔽放tc的zip文件
+*.zip
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
